@@ -81,6 +81,7 @@ public class LocalGroupService {
     private final ClientRepository clientRepository;
     private final ClientService clientService;
     private final AuditDataHelper auditDataHelper;
+    private final IdentifierService identifierService;
 
     /**
      * Return local group.
@@ -187,14 +188,13 @@ public class LocalGroupService {
 
         auditLog(memberIds, localGroupEntity);
 
+        Set<ClientId> allClientIds = clientService.getAllClientIds();
         List<GroupMemberEntity> membersToBeAdded = new ArrayList<>(memberIds.size());
-        for (ClientId memberId : memberIds) {
-            Optional<ClientEntity> foundMember = clientService.findEntityByClientId(memberId);
-            if (!foundMember.isPresent()) {
+        for (ClientId clientIdToBeAdded : memberIds) {
+            if (!allClientIds.contains(clientIdToBeAdded)) {
                 throw new LocalGroupMemberNotFoundException(CLIENT_WITH_ID
-                        + memberId.toShortString() + NOT_FOUND);
+                        + clientIdToBeAdded.toShortString() + NOT_FOUND);
             }
-            ClientId clientIdToBeAdded = foundMember.get().getIdentifier();
             boolean isAdded = localGroupEntity.getGroupMembers().stream()
                     .anyMatch(groupMemberEntity -> groupMemberEntity.getGroupMemberId().toShortString().trim()
                             .equals(clientIdToBeAdded.toShortString().trim()));
@@ -203,7 +203,8 @@ public class LocalGroupService {
             }
             GroupMemberEntity groupMemberEntity = new GroupMemberEntity();
             groupMemberEntity.setAdded(new Date());
-            groupMemberEntity.setGroupMemberId(XRoadIdMapper.get().toEntity(clientIdToBeAdded));
+            groupMemberEntity.setGroupMemberId(
+                    identifierService.getOrPersistXroadIdEntity(XRoadIdMapper.get().toEntity(clientIdToBeAdded)));
             membersToBeAdded.add(groupMemberEntity);
         }
         // do not remove this saveOrUpdateAll - contrary to expectations hibernate does not cascade such
@@ -266,7 +267,7 @@ public class LocalGroupService {
                 .filter(member -> items.stream()
                         .anyMatch(item -> item.toShortString().trim()
                                 .equals(member.getGroupMemberId().toShortString().trim())))
-                .collect(Collectors.toList());
+                .toList();
 
         // do not remove members at all if even one of them was not found
         if (membersToBeRemoved.isEmpty() || items.size() != membersToBeRemoved.size()) {
